[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://board.tscn" type="PackedScene" id=2]
[ext_resource path="res://pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://title.tscn" type="PackedScene" id=4]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="board" parent="." instance=ExtResource( 2 )]

[node name="pause" parent="." instance=ExtResource( 3 )]
visible = false

[node name="title" parent="." instance=ExtResource( 4 )]

[connection signal="game_over" from="board" to="." method="_on_board_game_over"]
[connection signal="pause" from="board" to="." method="_on_board_pause"]
[connection signal="end_game" from="pause" to="." method="_on_pause_end_game"]
[connection signal="start" from="title" to="." method="_on_title_start"]
